tests/compile/compile_fail/vec3_nondet_in_det_context.stderr
error[E0277]: the trait bound `f32: echo_math::DeterministicScalar` is not satisfied
 --> tests/compile/compile_fail/vec3_nondet_in_det_context.rs:7:15
  |
7 |     integrate(v); // should fail
  |     --------- ^ the trait `echo_math::DeterministicScalar` is not implemented for `f32`
  |     |
  |     required by a bound introduced by this call
  |
  = help: the following other types implement trait `echo_math::DeterministicScalar`:
            DFix64
            F32Det
note: required by a bound in `integrate`
 --> tests/compile/compile_fail/vec3_nondet_in_det_context.rs:3:17
  |
3 | fn integrate<T: DeterministicScalar>(v: Vec3<T>) {}
  |                 ^^^^^^^^^^^^^^^^^^^ required by this bound in `integrate`

warning: unused variable: `v`
 --> tests/compile/compile_fail/vec3_nondet_in_det_context.rs:3:38
  |
3 | fn integrate<T: DeterministicScalar>(v: Vec3<T>) {}
  |                                      ^ help: if this is intentional, prefix it with an underscore: `_v`
  |
  = note: `#[warn(unused_variables)]` on by default
